@@ -6,6 +6,8 @@
 
 	* ipmi-fru/: Add --fru-file option.
 
+	* libfreeipmi/: Add ipmi_cmd_write_fru_data function.
+
 2016-05-04 Albert Chu <chu11@llnl.gov>
 
 	* man/ipmi-fru.8.pre.in, man/bmc-device.8.pre.in: Minor fixes
